# doc_lsp

./: .coveragerc  EDITORS_SETUP.md  KATE_SETUP.md  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: release.yml  test.yml
code/doc-lsp-vscode/: .gitignore  .vscodeignore  README.md  build.sh  package.json
code/doc-lsp-vscode/src/: extension.ts
examples/: README.md  marmite.yaml  marmite.yaml.md  settings.py  settings.py.md
src/doc_lsp/: __init__.py  feature.py  parser.py
tests/: conftest.py  test_basic.py  test_python.py
