[project]
name = "doc-lsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bruno Rocha", email = "rochacbruno@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pygls",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
]

[project.scripts]
doc-lsp = "doc_lsp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pygls = { git = "https://github.com/openlawlibrary/pygls" }
pytest-lsp = { git = "https://github.com/swyddfa/lsp-devtools.git", subdirectory = "lib/pytest-lsp" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-lsp>=0.4.3",
]
